--- a/public/styles/daleri-mega-v1.2.css
+++ b/public/styles/daleri-mega-v1.2.css
@@ -5,7 +5,7 @@ For more information, see http://andreasviklund.com/templates/daleri-mega/
 
 /* Body */
 * {margin:0; padding:0;}
-body {background:#303030 url(/styles/bodybg.gif) top center repeat-x; color:#eee; font:76% Verdana,Arial,Tahoma,"Trebuchet MS",sans-serif; line-height:1.4em; text-align:center; padding:0;}
+body {background:#303030 url(/images/bodybg.gif) top center repeat-x; color:#eee; font:76% Verdana,Arial,Tahoma,"Trebuchet MS",sans-serif; line-height:1.4em; text-align:center; padding:0;}
 
 #wrap {width:90%; min-width:750px; background-color:#fff; color:#555; padding:1%; margin:0 auto 0 auto; text-align:left; border:1px solid #555;}
 #top {width:90%; margin:15px auto 15px auto;}
